# gornilo

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cli.rs  gornilo_config.rs  helpers.rs  lib.rs  main.rs  project_buider.rs  project_builder.rs  project_creator.rs  test_runner.rs
src/project_creator/: github_workflow_generator.rs  gitignore_generator.rs  odin_code_generator.rs  ols_config_generator.rs
